# MergenVisionv1

./: .editorconfig  .gitignore  AGENTS.md  Makefile  whatwentwrong.md
architecture/: 01-phase1-high-level-architecture.md  02-phase1-component-diagram.md  03-phase1-postgresql-erd.md  04-phase1-minio-object-layout.md  05-phase1-qdrant-vector-design.md  06-phase1-api-contract.md  FROZEN_SHA256SUMS
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_phase1_schema.py
backend/src/mergenvision/: __init__.py
backend/src/mergenvision/api/: __init__.py
backend/src/mergenvision/application/: __init__.py  enrollment_persistence.py  storage_reconciliation.py
backend/src/mergenvision/config/: __init__.py  settings.py  storage.py
backend/src/mergenvision/domain/: __init__.py  entities.py  enums.py  errors.py  ids.py  storage_keys.py
backend/src/mergenvision/infrastructure/: __init__.py
backend/src/mergenvision/infrastructure/database/: base.py  mappers.py  models.py  repositories.py  session.py  unit_of_work.py
backend/src/mergenvision/infrastructure/object_storage/: minio_adapter.py
backend/src/mergenvision/infrastructure/security/: national_id.py
backend/src/mergenvision/infrastructure/vector_index/: qdrant_adapter.py
backend/src/mergenvision/ports/: __init__.py  national_id.py  object_storage.py  repositories.py  unit_of_work.py  vector_index.py
backend/tests/: test_dependency_boundaries.py  test_forbidden_runtime_dependencies.py  test_package_smoke.py
backend/tests/integration/: conftest.py  storage_helpers.py  test_alembic_postgres.py  test_cross_store_persistence.py  test_cross_store_reconciliation.py  test_minio_adapter.py  test_postgres_constraints.py  test_postgres_repositories.py  test_qdrant_adapter.py
backend/tests/unit/: fakes.py  test_alembic_source_immutability.py  test_database_metadata_contract.py  test_domain_entities.py  test_enrollment_persistence.py  test_external_storage_test_safety.py  test_national_id_protection.py  test_object_storage_contract.py  test_storage_keys.py  test_storage_reconciliation.py  test_storage_settings.py  test_test_database_safety.py  test_uuid7.py  test_vector_index_contract.py
contracts/face_inference/v1/: README.md  face_inference.proto
docs/benchmarks/: BULK_ENROLLMENT_BENCHMARK_SPEC.md
docs/implementation/: CURRENT_SPRINT.md  IMPLEMENTATION_DETAILS.md  PHASE1_EXECUTION_CHARTER.md  REFERENCE_DECISION_LOG.md
frontend/: README.md
native/: CMakeLists.txt
native/apps/runtime_server/: README.md
native/include/mergenvision/face_core/: version.hpp
native/src/: version.cpp
native/tests/: version_smoke.cpp
opensourcereferences/: references.md
requirements/: phase1requirements.md
scripts/: bootstrap_foundation.sh  check_external_storage_test_safety.py  check_test_database_safety.py  run_postgres_integration_tests.sh  run_storage_integration_tests.sh  verify_repository_boundaries.sh
