[project]
name = "mergenvision-backend"
version = "0.1.0"
description = "MergenVision Phase 1 photo-based person recognition backend"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    "asyncpg>=0.29.0,<0.32.0",
    "cryptography>=42.0.0,<45.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "minio>=7.2.0,<8.0.0",
    "qdrant-client>=1.14.0,<1.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23.0,<1.5.0",
    "ruff>=0.5,<0.8",
    "mypy>=1.11,<1.12",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["mergenvision*"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
